<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_bg">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_task"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_task_txt"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/title_shape_bg"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_title"
            app:layout_constraintTop_toBottomOf="@+id/add_task"
            android:layout_margin="5dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_title"
                android:hint="@string/title_hint"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_note"
            app:layout_constraintTop_toBottomOf="@+id/til_title"
            android:layout_margin="5dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_note"
                android:hint="@string/description_hint"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_time"
            app:layout_constraintTop_toBottomOf="@+id/til_note"
            android:layout_margin="15dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/date_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_cancel_txt"
            android:textAllCaps="false"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_save_txt"
            android:textAllCaps="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>